[gd_scene format=3 uid="uid://bq0khrtdtveh8"]

[ext_resource type="Script" uid="uid://cug7cshhmy0s0" path="res://scenes/views/game.gd" id="1_jmdlf"]
[ext_resource type="PackedScene" uid="uid://bf8l5xrmmuh41" path="res://scenes/characters/horse_player.tscn" id="1_m46om"]
[ext_resource type="Texture2D" uid="uid://b0dnfpxpt4wa7" path="res://assets/sprites/background-320-180.png" id="2_dimhi"]
[ext_resource type="PackedScene" uid="uid://cqbtxxdm0qyl1" path="res://scenes/terrain/border_body.tscn" id="2_yj28s"]
[ext_resource type="PackedScene" uid="uid://dbxargdbd8olk" path="res://scenes/ui/launch_cursor.tscn" id="4_80xvq"]
[ext_resource type="PackedScene" uid="uid://bowqhc08rt075" path="res://scenes/terrain/floor_body.tscn" id="4_n0tf4"]
[ext_resource type="AudioStream" uid="uid://dt7fbuw8ovq2g" path="res://assets/music/Music_Loop_8_Full.ogg" id="6_n0tf4"]
[ext_resource type="PackedScene" uid="uid://dleysodfbmsdr" path="res://scenes/characters/enemies/enemy_spawn_manager.tscn" id="8_bi265"]
[ext_resource type="PackedScene" uid="uid://dwe0rogyddw52" path="res://scenes/ui/game_ui.tscn" id="9_4te5h"]
[ext_resource type="PackedScene" uid="uid://cdjn0ir01tj31" path="res://scenes/ui/game_over_screen.tscn" id="10_v6rvo"]

[node name="Game" type="Node2D" unique_id=368179119]
script = ExtResource("1_jmdlf")
metadata/_edit_vertical_guides_ = [0.0]

[node name="BackgroundSprite" type="Sprite2D" parent="." unique_id=316795862]
z_index = -1
texture = ExtResource("2_dimhi")
centered = false

[node name="HorsePlayer" parent="." unique_id=570504137 instance=ExtResource("1_m46om")]
position = Vector2(142, 143)

[node name="WorldNodes" type="Node" parent="." unique_id=544868373]

[node name="BorderBody" parent="WorldNodes" unique_id=569925918 instance=ExtResource("2_yj28s")]

[node name="FloorBody" parent="WorldNodes" unique_id=1332572446 instance=ExtResource("4_n0tf4")]
position = Vector2(0, 156)

[node name="ControllerNodes" type="Node" parent="." unique_id=22596498]

[node name="LaunchCursor" parent="ControllerNodes" unique_id=1283492629 instance=ExtResource("4_80xvq")]
visible = false

[node name="EnemiesContainer" type="Node" parent="." unique_id=1572193847]

[node name="EnemySpawnManager" parent="EnemiesContainer" unique_id=720133095 instance=ExtResource("8_bi265")]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="." unique_id=344980592]
stream = ExtResource("6_n0tf4")
volume_db = -20.0
autoplay = true
parameters/looping = true

[node name="UICanvas" type="CanvasLayer" parent="." unique_id=1930226412]
process_mode = 3

[node name="GameUI" parent="UICanvas" unique_id=355713589 instance=ExtResource("9_4te5h")]

[node name="GameOverScreen" parent="UICanvas" unique_id=1623709558 instance=ExtResource("10_v6rvo")]
z_index = 3
